src/objects/ints__Yodlee_Call__c.object
<CustomObject>
    <description>One Yodlee Call for a User/Account.</description>
    <fields>
        <fullName>ints__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Yodlee Calls</relationshipLabel>
        <relationshipName>Yodlee_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Client_Id__c</fullName>
        <description>This is the ID of the client module that is using the search service.</description>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Client_Name__c</fullName>
        <description>This is the name of the client module that is using the search service.</description>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Yodlee Calls</relationshipLabel>
        <relationshipName>Yodlee_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Container_Type__c</fullName>
        <label>Container Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__End_Number__c</fullName>
        <description>This indicates the end number in resultRange that fits the range of results returned. While the lowerFetchLimit and higherFetchLimit determine the records that need to be kept in the cache, the startNumber and endNumber parameters determine the records that need to be returned by this API. For example, once the first set of 500 records are retrieved and kept in the cache, the records can be retrieved in smaller chunks of 100 records each. The first set will be returned by this API. To retrieve the remaining records from the cache, the ​getUserTransactions API has to be invoked providing the required starting and ending number as 101 and 200 respectively. Once the 500 records in the cache are retrieved, again the current API, executeUserSearchRequest needs to be called to cache the next set of records.</description>
        <label>End Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__From_Date__c</fullName>
        <description>This is the starting date of the postDateRange which is the range of dates to be searched for.</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__Higher_Fetch_Limit__c</fullName>
        <description>This is the higher limit for the set of records that needs to be retrieved and kept in the cache (i.e., the value for n while retrieving from mth transaction to nth transaction). The higherFetchLimit and lowerFetchLimit parameters are used for limiting the number of transactions that should be retrieved and kept in the cache by this API. The difference between higherFetchLimit and lowerFetchLimit will indicate the number of transactions that will be retrieved. For example, if a value of 1 is specified for lowerFetchLimit and a value of 500 is specified for higherFetchLimit, then that set of 500 transactions will be retrieved by this API and will be kept in cache. For the next set, this API has to be called again providing the new lowerFetchLimit (say, 501) and higherFetchLimit (say, 1000).</description>
        <label>Higher Fetch Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Ignore_User_Input__c</fullName>
        <label>Ignore User Input</label>
        <picklist>
            <picklistValues>
                <fullName>true</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>false</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Loan_Payments__c</fullName>
        <label>Loan Payments</label>
        <summarizedField>ints__Yodlee_Transaction__c.ints__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ints__Yodlee_Transaction__c.ints__Transaction_Category__c</field>
            <operation>equals</operation>
            <value>Loans</value>
        </summaryFilterItems>
        <summaryForeignKey>ints__Yodlee_Transaction__c.ints__Yodlee_Call__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ints__Lower_Fetch_Limit__c</fullName>
        <description>This is the lower limit for the set of records that needs to be retrieved and kept in the cache (i.e., the value for m while retrieving from mth transaction to nth transactions). 
See the description of higherFetchLimit for more details.</description>
        <label>Lower Fetch Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Start_Number__c</fullName>
        <description>This indicates the start number in resultRange that fits the range of results returned.

See the description of endNumber for more details.</description>
        <label>Start Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__To_Date__c</fullName>
        <description>This is the ending date of the postDateRange which is the range of dates to be searched for.</description>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__Transaction_Split_Type__c</fullName>
        <description>This is the split type. If this split type is PARENT_TRANSACTION_TYPE i.e.,  &quot;P&quot;, only the aggregated transactions will be returned without the splits.If the type is SPLIT_TRANSACTION, i.e., &quot;C&quot;, only the split transaction will be returned.  If the type is ALL_TRANSACTION, i.e., &quot;A&quot;, the splits along with aggregated transactions will be returned.</description>
        <label>Transaction Split Type</label>
        <picklist>
            <picklistValues>
                <fullName>ALL_TRANSACTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARENT_TRANSACTION_TYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPLIT_TRANSACTION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Yodlee Call</label>
    <nameField>
        <displayFormat>YCL-{MM}-{DD}-{YYYY}-{000000}</displayFormat>
        <label>Yodlee Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yodlee Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>